# marcos-silva.com

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MIT-LICENSE  Modelfile  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  config.toml  entrypoint.sh  main.py  ollama.Dockerfile  ollama.Dockerfile.dockerignore  pyproject.toml  website.Dockerfile
.github/: CODEOWNERS
.github/workflows/: ci.yaml  deploy.yaml
config/: deploy.ollama.yml  deploy.website.yml
content/: something_2.md
content/posts/: my-first-post.md
data/: config.json  experience.json  marcos_info.txt  navigation.json  sidebar.json  skills.json  social.json
infra/: .terraform.lock.hcl  cloud-init.yaml.tftpl  main.tf  outputs.tf  provider.tf  variables.tf
static/: script.js  site.webmanifest  style.css
templates/: index.html
themes/marcos-uilite/: README.md  theme.toml
themes/marcos-uilite/layouts/: index.html
themes/marcos-uilite/layouts/partials/: blog.html  header.html  nav.html  seo_schema.html
themes/marcos-uilite/layouts/work/: single.html
